// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg - Fill fill-amber-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294966251,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-black 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-blue-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293916415,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-cyan-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293721855,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-emerald-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293721589,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-fuchsia-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294833407,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-gray-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294572795,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-green-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293983732,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-indigo-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293849855,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-lime-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294442727,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-neutral-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294638330,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-orange-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294965229,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-pink-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294832888,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-purple-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294637055,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-red-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294898418,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-rose-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294963698,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-sky-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293982719,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-slate-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294507260,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-stone-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294638329,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-teal-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4293983738,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-transparent 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 0,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-violet-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294308863,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-white 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-yellow-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294900968,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-zinc-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        {
          "payload": 4294638330,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
